[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdr_dsp"
version = "0.1.0"
description = "A personal, fully-functional DSP library for software-defined radio IQ."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "LC-Linkous" }]
keywords = ["sdr", "dsp", "iq", "radio", "signal-processing", "hackrf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]

# Core depends only on numpy + scipy. scipy is used for filter-coefficient
# DESIGN and as a test oracle; the radio DSP itself is sdr_dsp's own code.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
# These extras are for the EXAMPLE scripts, not the library core. The library
# itself depends only on numpy + scipy and knows nothing about any device.
# Plotting for the analyzer/spectrogram examples (matplotlib ONLY -- no PyQt5;
# its wheels don't resolve cleanly on Windows via uv).
plotting = ["matplotlib"]
# Optional live audio playback for example output; default writes a WAV.
audio = ["sounddevice"]
# Live capture in the examples uses hackrfpy (from PyPI). It is NOT a library
# dependency -- only example scripts that talk to a HackRF need it, and they
# import it themselves. Install when running those examples:
#     pip install hackrfpy        # plus the hackrf-tools binaries (OS level)
examples-hackrf = ["hackrfpy>=1.0.0"]

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/sdr_dsp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "hardware: requires a connected HackRF (auto-skipped otherwise)",
]

[tool.ruff]
line-length = 88
target-version = "py310"
