[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdr_dsp"
version = "0.1.0"
description = "A personal, fully-functional DSP library for software-defined radio IQ."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "LC-Linkous" }]
keywords = ["sdr", "dsp", "iq", "radio", "signal-processing", "hackrf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]

# Core depends only on numpy + scipy. scipy is used for filter-coefficient
# DESIGN and as a test oracle; the radio DSP itself is sdr_dsp's own code.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
# These extras are for the EXAMPLE scripts, not the library core. The library
# itself depends only on numpy + scipy and knows nothing about any device.
#
# Quick start: `uv sync --extra examples` installs everything needed to run
# ANY example (plotting + audio + hackrfpy). The granular extras below let you
# install just what a specific example needs.

# Plotting for the analyzer/spectrogram/teaching examples (matplotlib ONLY --
# no PyQt5; its wheels don't resolve cleanly on Windows via uv).
plotting = ["matplotlib"]
# Live audio playback (live_fm_listen.py); other audio examples write a WAV.
audio = ["sounddevice"]
# Live capture examples use hackrfpy (from PyPI). NOT a library dependency.
# Live capture additionally needs the hackrf-tools binaries at the OS level.
examples-hackrf = ["hackrfpy>=1.0.0"]
# Aggregate: everything the examples can use, in one install.
examples = ["matplotlib", "sounddevice", "hackrfpy>=1.0.0"]

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/sdr_dsp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "hardware: requires a connected HackRF (auto-skipped otherwise)",
]

[tool.ruff]
line-length = 88
target-version = "py310"